--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FCC786</color>
-    <color name="purple_500">#EE6F00</color>
+    <color name="purple_200">#CB86FC</color>
+    <color name="purple_500">#3400EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#DA4E03</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_200">#75E5F8</color>
+    <color name="teal_700">#340187</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="transperent_main">#6AFFB9B9</color>
+    <color name="transperent_main">#6AE4B9FF</color>
 </resources>
