--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,6 +11,11 @@
             android:title="@string/menu_home" />
 
         <item
+            android:id="@+id/nav_lexeme"
+            android:icon="@drawable/mathultra"
+            android:title="@string/lexeme_english" />
+
+        <item
             android:id="@+id/nav_algebra"
             android:icon="@drawable/mathultra"
             android:title="@string/algebra" />
