--- a/app/src/main/res/layout/fragment_lexeme.xml
+++ b/app/src/main/res/layout/fragment_lexeme.xml
@@ -82,12 +82,11 @@
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+                android:layout_marginTop="16dp"
                 android:orientation="horizontal"
                 android:weightSum="2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_compute">
+                app:layout_constraintTop_toBottomOf="@+id/btn_compute"
+                tools:layout_editor_absoluteX="0dp">
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:id="@+id/keys"
@@ -149,11 +148,10 @@
                     android:id="@+id/floatingRestart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5sp"
+                    android:layout_margin="8dp"
                     android:clickable="true"
                     android:elevation="10sp"
                     android:visibility="invisible"
-
                     app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.163"
@@ -167,12 +165,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
+                android:layout_marginTop="8dp"
                 android:gravity="center"
                 android:textColor="@android:color/black"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 app:layout_collapseMode="parallax"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                 tools:text="Result: 10" />
