--- a/app/src/main/res/layout/fragment_lexeme.xml
+++ b/app/src/main/res/layout/fragment_lexeme.xml
@@ -21,165 +21,154 @@
     android:layout_height="match_parent"
     >
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+     <androidx.core.widget.NestedScrollView
+         android:id="@+id/nestedScrollView"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+         tools:layout_editor_absoluteX="0dp"
+         tools:layout_editor_absoluteY="49dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="@+id/viewPager2"
-            app:layout_constraintTop_toBottomOf="@+id/viewPager2">
-
-
-            <TextView
-                android:id="@+id/subtitle2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="120dp"
-                android:gravity="center"
-                android:text="Введите выражение:"
-                android:textColor="@android:color/black"
-                android:textSize="25sp"
-                app:layout_collapseMode="parallax"
-                app:layout_constraintBottom_toTopOf="@+id/btn_compute"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
-
-            <EditText
-                android:id="@+id/editText"
-                android:layout_width="377dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="8sp"
-                android:hint="cos(x)*ln(x)+20"
-                android:textColor="@android:color/black"
-                android:textSize="27sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.441"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/subtitle2" />
-
-            <EditText
-                android:id="@+id/editTextVar"
-                android:layout_width="377dp"
-                android:layout_height="50dp"
-                android:hint="Введите число аргументов"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.529"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText" />
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/linearLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal"
-                android:weightSum="2"
-                app:layout_constraintTop_toBottomOf="@+id/btn_compute"
-                tools:layout_editor_absoluteX="0dp">
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:id="@+id/keys"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical" />
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:id="@+id/values"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                android:id="@+id/btn_compute"
-                android:layout_width="220sp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="444dp"
-                android:elevation="10sp"
-                android:enabled="false"
-                android:text="COMPUTE"
-                android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
-
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/subtitle2"
-                app:tint="@android:color/white" />
-
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/viewPager2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/result"
-                app:layout_constraintVertical_bias="0.081" />
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/linearLayoutCompat3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/btn_compute"
-                app:layout_constraintTop_toBottomOf="@+id/editTextVar">
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/floatingRestart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:clickable="true"
-                    android:elevation="10sp"
-                    android:visibility="invisible"
-                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.163"
-                    app:layout_constraintStart_toEndOf="@+id/btn_compute"
-                    app:layout_constraintTop_toBottomOf="@+id/buttonEnter"
-                    app:srcCompat="@android:drawable/ic_menu_revert" />
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <TextView
-                android:id="@+id/result"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginTop="8dp"
-                android:gravity="center"
-                android:textColor="@android:color/black"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                app:layout_collapseMode="parallax"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-                tools:text="Result: 10" />
+         <androidx.constraintlayout.widget.ConstraintLayout
+             android:id="@+id/constraintLayout2"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             app:layout_constraintBottom_toBottomOf="@+id/viewPager2"
+             app:layout_constraintTop_toBottomOf="@+id/viewPager2">
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+             <TextView
+                 android:id="@+id/subtitle2"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="bottom"
+                 android:gravity="center"
+                 android:text="Введите выражение:"
+                 android:textColor="@android:color/black"
+                 android:textSize="25sp"
+                 app:layout_collapseMode="parallax"
+                 app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+             <EditText
+                 android:id="@+id/editText"
+                 android:layout_width="377dp"
+                 android:layout_height="50dp"
+                 android:layout_marginTop="8sp"
+                 android:hint="cos(x)*ln(x)+20"
+                 android:textColor="@android:color/black"
+                 android:textSize="27sp"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintHorizontal_bias="0.529"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@+id/subtitle2" />
+
+             <EditText
+                 android:id="@+id/editTextVar"
+                 android:layout_width="377dp"
+                 android:layout_height="50dp"
+                 android:hint="Введите число аргументов"
+                 android:textColor="@android:color/black"
+                 android:textSize="20sp"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintHorizontal_bias="0.529"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@+id/editText" />
+
+             <androidx.appcompat.widget.LinearLayoutCompat
+                 android:id="@+id/linearLayout"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="32dp"
+                 android:orientation="horizontal"
+                 android:weightSum="2"
+                 app:layout_constraintTop_toBottomOf="@+id/btn_compute"
+                 tools:layout_editor_absoluteX="0dp">
+
+                 <androidx.appcompat.widget.LinearLayoutCompat
+                     android:id="@+id/keys"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_weight="1"
+                     android:orientation="vertical" />
+
+                 <androidx.appcompat.widget.LinearLayoutCompat
+                     android:id="@+id/values"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_weight="1"
+                     android:orientation="vertical" />
+             </androidx.appcompat.widget.LinearLayoutCompat>
+
+             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                 android:id="@+id/btn_compute"
+                 android:layout_width="220sp"
+                 android:layout_height="50dp"
+                 android:layout_gravity="center"
+                 android:layout_marginStart="64dp"
+                 android:layout_marginTop="24dp"
+                 android:elevation="10sp"
+                 android:enabled="false"
+                 android:text="COMPUTE"
+                 android:textAlignment="center"
+
+                 android:textColor="@android:color/black"
+                 android:textSize="16sp"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@+id/editTextVar"
+                 app:tint="@android:color/white" />
+
+             <androidx.viewpager2.widget.ViewPager2
+                 android:id="@+id/viewPager2"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="15sp"
+                 app:layout_constraintBottom_toBottomOf="parent"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintHorizontal_bias="1.0"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@+id/result"
+                 app:layout_constraintVertical_bias="0.081" />
+
+             <androidx.appcompat.widget.LinearLayoutCompat
+                 android:id="@+id/linearLayoutCompat3"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="8dp"
+                 android:orientation="vertical"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintHorizontal_bias="0.589"
+                 app:layout_constraintStart_toEndOf="@+id/btn_compute"
+                 app:layout_constraintTop_toBottomOf="@+id/editTextVar">
+
+                 <com.google.android.material.floatingactionbutton.FloatingActionButton
+                     android:id="@+id/floatingRestart"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_margin="@dimen/fab_margin"
+                     android:visibility="gone"
+                     app:srcCompat="@android:drawable/ic_menu_revert" />
+             </androidx.appcompat.widget.LinearLayoutCompat>
+
+             <TextView
+                 android:id="@+id/result"
+                 android:layout_width="0dp"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="bottom"
+                 android:layout_marginTop="8dp"
+                 android:gravity="center"
+                 android:textColor="@android:color/black"
+                 android:textSize="25sp"
+                 android:textStyle="bold"
+                 app:layout_collapseMode="parallax"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 app:layout_constraintHorizontal_bias="0.0"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+                 tools:text="Result: 10" />
+
+
+         </androidx.constraintlayout.widget.ConstraintLayout>
+     </androidx.core.widget.NestedScrollView>
+
+ </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
