--- a/app/src/main/res/layout/fragment_lexeme.xml
+++ b/app/src/main/res/layout/fragment_lexeme.xml
@@ -108,7 +108,7 @@
                  android:layout_marginTop="24dp"
                  android:elevation="10sp"
                  android:enabled="false"
-                 android:text="COMPUTE"
+                 android:text="@string/compute"
                  android:textAlignment="center"
 
                  android:textColor="@android:color/black"
