--- a/app/src/main/res/layout/fragment_practice_algebra.xml
+++ b/app/src/main/res/layout/fragment_practice_algebra.xml
@@ -9,7 +9,8 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        tools:layout_editor_absoluteX="-105dp"
+        tools:layout_editor_absoluteY="16dp">
 
         <androidx.appcompat.widget.LinearLayoutCompat
 
@@ -86,8 +87,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:textAlignment="center"
                     android:text="SLE"
+                    android:textAlignment="center"
                     android:textSize="15sp" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -108,9 +109,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:layout_margin="12dp"
                         app:cardBackgroundColor="#FFFDFB"
                         app:cardCornerRadius="15dp"
-                        android:layout_margin="12dp"
                         app:cardElevation="10dp">
 
                         <androidx.appcompat.widget.LinearLayoutCompat
@@ -119,9 +120,9 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
-                            app:cardBackgroundColor="#FFFDFB"
                             android:orientation="vertical"
-                            android:paddingTop="16dp">
+                            android:paddingTop="16dp"
+                            app:cardBackgroundColor="#FFFDFB">
 
                         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -131,21 +132,21 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:layout_margin="12dp"
                         app:cardBackgroundColor="#FFFDFB"
                         app:cardCornerRadius="15dp"
-                        android:layout_margin="12dp"
                         app:cardElevation="10dp">
 
                         <androidx.appcompat.widget.LinearLayoutCompat
                             android:id="@+id/sle_stolbec"
-                            android:visibility="visible"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
-                            app:cardBackgroundColor="#FFFDFB"
                             android:orientation="vertical"
-                            android:paddingTop="16dp">
+                            android:paddingTop="16dp"
+                            android:visibility="visible"
+                            app:cardBackgroundColor="#FFFDFB">
 
                         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -155,12 +156,64 @@
 
             </androidx.core.widget.NestedScrollView>
 
-            <androidx.appcompat.widget.LinearLayoutCompat
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal"
-                android:weightSum="2">
+                android:weightSum="2"
+                app:layout_constraintEnd_toEndOf="@+id/spinner_type_operation"
+                app:layout_constraintStart_toEndOf="@+id/spinner_type_operation">
 
+                <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/spinner_choice"
+                    android:layout_width="200dp"
+                    android:layout_height="36dp"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:textSize="15sp"
+
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.051"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/spinner_type_det"
+                    android:layout_width="200dp"
+                    android:layout_height="36dp"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:textSize="15sp"
+
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/spinner_type_inv"
+                    android:layout_width="200dp"
+                    android:layout_height="36dp"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:textSize="15sp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatSpinner
+                    android:id="@+id/spinner_type_rank"
+                    android:layout_width="200dp"
+                    android:layout_height="36dp"
+                    android:layout_gravity="center"
+                    android:textAlignment="center"
+                    android:textSize="15sp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                "<!--
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/det_button"
                     android:layout_width="150sp"
@@ -179,75 +232,19 @@
                     android:layout_weight="1"
                     android:textAlignment="center"
                     android:textSize="15sp" />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:orientation="horizontal"
-                android:weightSum="2">
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/inv_button"
-                    android:layout_width="150sp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="Обратная матрица"
-                    android:textAlignment="center"
-                    />
-
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/spinner_inv"
-                    android:layout_width="50sp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textSize="15sp" />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:orientation="horizontal"
-                android:weightSum="2">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/rank_button"
-                    android:layout_width="150sp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="Ранк матрицы"
-                    android:textAlignment="center"
-                    />
-
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/spinner_rank"
-                    android:layout_width="50sp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textSize="15sp" />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
+-->
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                android:id="@+id/goMultMatrix"
+                android:id="@+id/compute"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="2"
-                android:text="Умножить матрицы"
+                android:text="@string/compute"
                 android:textAlignment="center"
                 android:textSize="14sp"
-
                 />
 
             <androidx.appcompat.widget.AppCompatTextView
