Передача данных между фрагментами

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -44,7 +44,12 @@
         android:id="@+id/nav_algebra"
         android:name="com.example.flamemathnew.ui.algebra.AlgebraFragment"
         android:label="@string/algebra"
-        tools:layout="@layout/fragment_algebra" />
+        tools:layout="@layout/fragment_algebra" >
+        <argument
+            android:name="key"
+            app:argType="string"
+            android:defaultValue='"linal"' />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_discrete"
