--- a/app/src/main/res/layout/fragment_discrete.xml
+++ b/app/src/main/res/layout/fragment_discrete.xml
@@ -15,6 +15,8 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:text="AAAAAAAAAAAAAAAa"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
