--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,6 +23,12 @@
             android:id="@+id/nav_discrete"
             android:icon="@drawable/mathultra"
             android:title="@string/discrete_mathematics" />
+
+        <item
+            android:id="@+id/settingsFragment"
+            android:icon="@drawable/mathultra"
+            android:title="@string/settings" />
+
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/mathultra"
