Текст больше на загораживается кнопками, немного обновлен дизайн

--- a/app/src/main/res/layout/fragment_practice_algebra.xml
+++ b/app/src/main/res/layout/fragment_practice_algebra.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:name="androidx.navigation.fragment.NavHostFragment"
@@ -10,9 +9,9 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="-105dp"
-        tools:layout_editor_absoluteY="16dp">
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
 
@@ -20,6 +19,31 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <View
+                android:id="@+id/separator1"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/separator"
+                android:backgroundTint="#E1E1E1" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/algebra_description"
+                android:textAlignment="center"
+                android:textColor="@color/black" />
+
+            <View
+                android:id="@+id/separator2"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/separator"
+                android:backgroundTint="#E1E1E1" />
 
             <TextView
                 android:id="@+id/text_gallery"
@@ -42,6 +66,7 @@
 
                 <androidx.appcompat.widget.AppCompatSpinner
                     android:id="@+id/mSize"
+                    style="@android:style/Widget.ProgressBar.Small"
                     android:layout_width="70sp"
                     android:layout_height="70sp"
                     android:layout_gravity="center"
@@ -62,6 +87,7 @@
 
                 <androidx.appcompat.widget.AppCompatSpinner
                     android:id="@+id/nSize"
+                    style="@android:style/Widget.ProgressBar.Small"
                     android:layout_width="70sp"
                     android:layout_height="70sp"
                     android:layout_gravity="center"
@@ -78,6 +104,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/mult_matr"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -87,6 +114,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/plusSle"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -114,19 +142,17 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="12dp"
-                        app:cardBackgroundColor="#FFFDFB"
-                        app:cardCornerRadius="15dp"
-                        app:cardElevation="10dp">
+                        app:cardBackgroundColor="#DDF3FA"
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="0dp">
 
                         <androidx.appcompat.widget.LinearLayoutCompat
                             android:id="@+id/linearLayoutCompatMatrix"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="10dp"
+                            android:layout_height="10dp"
                             android:layout_gravity="center"
                             android:layout_margin="5dp"
-                            android:orientation="vertical"
-                            android:paddingTop="16dp"
-                            app:cardBackgroundColor="#FFFDFB">
+                            android:orientation="vertical">
 
                         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -165,8 +191,7 @@
                 android:layout_height="50dp"
                 android:orientation="horizontal"
                 android:weightSum="2"
-                app:layout_constraintEnd_toEndOf="@+id/spinner_type_operation"
-                app:layout_constraintStart_toEndOf="@+id/spinner_type_operation">
+                tools:layout_editor_absoluteY="251dp">
 
                 <androidx.appcompat.widget.AppCompatSpinner
                     android:id="@+id/spinner_choice"
@@ -217,25 +242,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                "<!--
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/det_button"
-                    android:layout_width="150sp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:text="Определитель"
-                    android:textAlignment="center"
-                    />
-
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/spinner_det"
-                    android:layout_width="50sp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textSize="15sp" />
 -->
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -245,17 +251,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_weight="2"
                 android:text="@string/compute"
                 android:textAlignment="center"
-                android:textSize="14sp"
-                />
+                android:textSize="20sp" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/log"
-                android:layout_margin="5dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_margin="5dp" />
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
